objects/CallRail_Phone_Call__c.object
<CustomObject>
    <label>CallRail Phone Call</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>CallRail Phone Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CallRail Phone Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Call_Id__c</fullName>
        <label>Call Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Voicemail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voicemail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Datetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer Phone Number</label>
        <type>Phone</type>
    </fields>
</CustomObject>